// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters interactions filters filtering 1`] = `
<Filters
  filters={
    Object {
      "hostNames": Array [
        "search-coord2.akod.loc",
        "search-coord3.akod.loc",
      ],
      "packageNames": Array [
        "c.f.s.SearchEngine",
        "c.f.s.EngineContext",
      ],
      "threadNames": Array [
        "qtp-1",
        "qtp-2",
        "qtp-3",
        "qtp-4",
      ],
    }
  }
  filtersValues={
    Object {
      "hostNames": Object {
        "search-coord2.akod.loc": 5,
        "search-coord3.akod.loc": 3,
        "search-coord4.akod.loc": 1,
        "search-coord5.akod.loc": 0,
      },
      "packageNames": Object {
        "a.n.o.ther": 0,
        "c.f.s.EngineContext": 3,
        "c.f.s.SearchEngine": 5,
      },
      "threadNames": Object {
        "qtp-1": 5,
        "qtp-2": 3,
        "qtp-3": 0,
      },
    }
  }
  updateFilters={[Function]}
>
  <div>
    <h3>
      Filters
    </h3>
    <div
      className="row"
    >
      <div
        className="col-xs-4"
      >
        <div
          className="form-group"
        >
          <label
            htmlFor="packageNameFilter"
          >
            Package Name
          </label>
          <input
            className="form-control"
            id="packageNameFilter"
            name="packageNameFilter"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="filters-filter-options"
        >
          <div
            className="checkbox filters-checkbox"
          >
            <label
              className=""
            >
              <input
                checked={true}
                name="packageNames"
                onChange={[Function]}
                type="checkbox"
                value="c.f.s.EngineContext"
              />
              c.f.s.EngineContext
            </label>
            <div
              className="filters-count"
            >
              <span
                className="label label-default"
              >
                3
              </span>
            </div>
          </div>
          <div
            className="checkbox filters-checkbox"
          >
            <label
              className=""
            >
              <input
                checked={true}
                name="packageNames"
                onChange={[Function]}
                type="checkbox"
                value="c.f.s.SearchEngine"
              />
              c.f.s.SearchEngine
            </label>
            <div
              className="filters-count"
            >
              <span
                className="label label-default"
              >
                5
              </span>
            </div>
          </div>
          <div
            className="checkbox filters-checkbox"
          >
            <label
              className="zero-count-filter"
            >
              <input
                checked={false}
                name="packageNames"
                onChange={[Function]}
                type="checkbox"
                value="a.n.o.ther"
              />
              a.n.o.ther
            </label>
            <div
              className="filters-count"
            >
              <span
                className="label label-default"
              >
                0
              </span>
            </div>
          </div>
        </div>
        <div
          className="filter-labels"
        >
          <div>
            <span
              className="filter-label-to-remove label label-info"
            >
              <a
                className="close remove-filter"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </a>
              c.f.s.SearchEngine
            </span>
          </div>
          <div>
            <span
              className="filter-label-to-remove label label-info"
            >
              <a
                className="close remove-filter"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </a>
              c.f.s.EngineContext
            </span>
          </div>
        </div>
      </div>
      <div
        className="col-xs-4"
      >
        <div
          className="form-group"
        >
          <label
            htmlFor="hostNameFilter"
          >
            Host Name
          </label>
          <input
            className="form-control"
            id="hostNameFilter"
            name="hostNameFilter"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="filters-filter-options"
        >
          <div
            className="checkbox filters-checkbox"
          >
            <label
              className=""
            >
              <input
                checked={true}
                name="hostNames"
                onChange={[Function]}
                type="checkbox"
                value="search-coord2.akod.loc"
              />
              search-coord2.akod.loc
            </label>
            <div
              className="filters-count"
            >
              <span
                className="label label-default"
              >
                5
              </span>
            </div>
          </div>
          <div
            className="checkbox filters-checkbox"
          >
            <label
              className=""
            >
              <input
                checked={true}
                name="hostNames"
                onChange={[Function]}
                type="checkbox"
                value="search-coord3.akod.loc"
              />
              search-coord3.akod.loc
            </label>
            <div
              className="filters-count"
            >
              <span
                className="label label-default"
              >
                3
              </span>
            </div>
          </div>
          <div
            className="checkbox filters-checkbox"
          >
            <label
              className=""
            >
              <input
                checked={false}
                name="hostNames"
                onChange={[Function]}
                type="checkbox"
                value="search-coord4.akod.loc"
              />
              search-coord4.akod.loc
            </label>
            <div
              className="filters-count"
            >
              <span
                className="label label-default"
              >
                1
              </span>
            </div>
          </div>
          <div
            className="checkbox filters-checkbox"
          >
            <label
              className="zero-count-filter"
            >
              <input
                checked={false}
                name="hostNames"
                onChange={[Function]}
                type="checkbox"
                value="search-coord5.akod.loc"
              />
              search-coord5.akod.loc
            </label>
            <div
              className="filters-count"
            >
              <span
                className="label label-default"
              >
                0
              </span>
            </div>
          </div>
        </div>
        <div
          className="filter-labels"
        >
          <div>
            <span
              className="filter-label-to-remove label label-info"
            >
              <a
                className="close remove-filter"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </a>
              search-coord2.akod.loc
            </span>
          </div>
          <div>
            <span
              className="filter-label-to-remove label label-info"
            >
              <a
                className="close remove-filter"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </a>
              search-coord3.akod.loc
            </span>
          </div>
        </div>
      </div>
      <div
        className="col-xs-4"
      >
        <div
          className="form-group"
        >
          <label
            htmlFor="threadNameFilter"
          >
            Thread Name
          </label>
          <input
            className="form-control"
            id="threadNameFilter"
            name="threadNameFilter"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="filters-filter-options"
        >
          <div
            className="checkbox filters-checkbox"
          >
            <label
              className=""
            >
              <input
                checked={true}
                name="threadNames"
                onChange={[Function]}
                type="checkbox"
                value="qtp-1"
              />
              qtp-1
            </label>
            <div
              className="filters-count"
            >
              <span
                className="label label-default"
              >
                5
              </span>
            </div>
          </div>
          <div
            className="checkbox filters-checkbox"
          >
            <label
              className=""
            >
              <input
                checked={true}
                name="threadNames"
                onChange={[Function]}
                type="checkbox"
                value="qtp-2"
              />
              qtp-2
            </label>
            <div
              className="filters-count"
            >
              <span
                className="label label-default"
              >
                3
              </span>
            </div>
          </div>
          <div
            className="checkbox filters-checkbox"
          >
            <label
              className="zero-count-filter"
            >
              <input
                checked={true}
                name="threadNames"
                onChange={[Function]}
                type="checkbox"
                value="qtp-3"
              />
              qtp-3
            </label>
            <div
              className="filters-count"
            >
              <span
                className="label label-default"
              >
                0
              </span>
            </div>
          </div>
        </div>
        <div
          className="filter-labels"
        >
          <div>
            <span
              className="filter-label-to-remove label label-info"
            >
              <a
                className="close remove-filter"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </a>
              qtp-1
            </span>
          </div>
          <div>
            <span
              className="filter-label-to-remove label label-info"
            >
              <a
                className="close remove-filter"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </a>
              qtp-2
            </span>
          </div>
          <div>
            <span
              className="filter-label-to-remove label label-info"
            >
              <a
                className="close remove-filter"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </a>
              qtp-3
            </span>
          </div>
          <div>
            <span
              className="filter-label-to-remove label label-info"
            >
              <a
                className="close remove-filter"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </a>
              qtp-4
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</Filters>
`;

exports[`Filters rendering 1`] = `
<div>
  <h3>
    Filters
  </h3>
  <div
    className="row"
  >
    <div
      className="col-xs-4"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="packageNameFilter"
        >
          Package Name
        </label>
        <input
          className="form-control"
          id="packageNameFilter"
          name="packageNameFilter"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="filters-filter-options"
      >
        <div
          className="checkbox filters-checkbox"
        >
          <label
            className=""
          >
            <input
              checked={true}
              name="packageNames"
              onChange={[Function]}
              type="checkbox"
              value="c.f.s.EngineContext"
            />
            c.f.s.EngineContext
          </label>
          <div
            className="filters-count"
          >
            <span
              className="label label-default"
            >
              3
            </span>
          </div>
        </div>
        <div
          className="checkbox filters-checkbox"
        >
          <label
            className=""
          >
            <input
              checked={true}
              name="packageNames"
              onChange={[Function]}
              type="checkbox"
              value="c.f.s.SearchEngine"
            />
            c.f.s.SearchEngine
          </label>
          <div
            className="filters-count"
          >
            <span
              className="label label-default"
            >
              5
            </span>
          </div>
        </div>
        <div
          className="checkbox filters-checkbox"
        >
          <label
            className="zero-count-filter"
          >
            <input
              checked={false}
              name="packageNames"
              onChange={[Function]}
              type="checkbox"
              value="a.n.o.ther"
            />
            a.n.o.ther
          </label>
          <div
            className="filters-count"
          >
            <span
              className="label label-default"
            >
              0
            </span>
          </div>
        </div>
      </div>
      <div
        className="filter-labels"
      >
        <div>
          <span
            className="filter-label-to-remove label label-info"
          >
            <a
              className="close remove-filter"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </a>
            c.f.s.SearchEngine
          </span>
        </div>
        <div>
          <span
            className="filter-label-to-remove label label-info"
          >
            <a
              className="close remove-filter"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </a>
            c.f.s.EngineContext
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-xs-4"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="hostNameFilter"
        >
          Host Name
        </label>
        <input
          className="form-control"
          id="hostNameFilter"
          name="hostNameFilter"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="filters-filter-options"
      >
        <div
          className="checkbox filters-checkbox"
        >
          <label
            className=""
          >
            <input
              checked={true}
              name="hostNames"
              onChange={[Function]}
              type="checkbox"
              value="search-coord2.akod.loc"
            />
            search-coord2.akod.loc
          </label>
          <div
            className="filters-count"
          >
            <span
              className="label label-default"
            >
              5
            </span>
          </div>
        </div>
        <div
          className="checkbox filters-checkbox"
        >
          <label
            className=""
          >
            <input
              checked={true}
              name="hostNames"
              onChange={[Function]}
              type="checkbox"
              value="search-coord3.akod.loc"
            />
            search-coord3.akod.loc
          </label>
          <div
            className="filters-count"
          >
            <span
              className="label label-default"
            >
              3
            </span>
          </div>
        </div>
        <div
          className="checkbox filters-checkbox"
        >
          <label
            className=""
          >
            <input
              checked={false}
              name="hostNames"
              onChange={[Function]}
              type="checkbox"
              value="search-coord4.akod.loc"
            />
            search-coord4.akod.loc
          </label>
          <div
            className="filters-count"
          >
            <span
              className="label label-default"
            >
              1
            </span>
          </div>
        </div>
        <div
          className="checkbox filters-checkbox"
        >
          <label
            className="zero-count-filter"
          >
            <input
              checked={false}
              name="hostNames"
              onChange={[Function]}
              type="checkbox"
              value="search-coord5.akod.loc"
            />
            search-coord5.akod.loc
          </label>
          <div
            className="filters-count"
          >
            <span
              className="label label-default"
            >
              0
            </span>
          </div>
        </div>
      </div>
      <div
        className="filter-labels"
      >
        <div>
          <span
            className="filter-label-to-remove label label-info"
          >
            <a
              className="close remove-filter"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </a>
            search-coord2.akod.loc
          </span>
        </div>
        <div>
          <span
            className="filter-label-to-remove label label-info"
          >
            <a
              className="close remove-filter"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </a>
            search-coord3.akod.loc
          </span>
        </div>
      </div>
    </div>
    <div
      className="col-xs-4"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="threadNameFilter"
        >
          Thread Name
        </label>
        <input
          className="form-control"
          id="threadNameFilter"
          name="threadNameFilter"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="filters-filter-options"
      >
        <div
          className="checkbox filters-checkbox"
        >
          <label
            className=""
          >
            <input
              checked={true}
              name="threadNames"
              onChange={[Function]}
              type="checkbox"
              value="qtp-1"
            />
            qtp-1
          </label>
          <div
            className="filters-count"
          >
            <span
              className="label label-default"
            >
              5
            </span>
          </div>
        </div>
        <div
          className="checkbox filters-checkbox"
        >
          <label
            className=""
          >
            <input
              checked={true}
              name="threadNames"
              onChange={[Function]}
              type="checkbox"
              value="qtp-2"
            />
            qtp-2
          </label>
          <div
            className="filters-count"
          >
            <span
              className="label label-default"
            >
              3
            </span>
          </div>
        </div>
        <div
          className="checkbox filters-checkbox"
        >
          <label
            className="zero-count-filter"
          >
            <input
              checked={true}
              name="threadNames"
              onChange={[Function]}
              type="checkbox"
              value="qtp-3"
            />
            qtp-3
          </label>
          <div
            className="filters-count"
          >
            <span
              className="label label-default"
            >
              0
            </span>
          </div>
        </div>
      </div>
      <div
        className="filter-labels"
      >
        <div>
          <span
            className="filter-label-to-remove label label-info"
          >
            <a
              className="close remove-filter"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </a>
            qtp-1
          </span>
        </div>
        <div>
          <span
            className="filter-label-to-remove label label-info"
          >
            <a
              className="close remove-filter"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </a>
            qtp-2
          </span>
        </div>
        <div>
          <span
            className="filter-label-to-remove label label-info"
          >
            <a
              className="close remove-filter"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </a>
            qtp-3
          </span>
        </div>
        <div>
          <span
            className="filter-label-to-remove label label-info"
          >
            <a
              className="close remove-filter"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </a>
            qtp-4
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filters rendering 2`] = `null`;
